--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input
     type="hidden"
     name="_redirect"
-    value="https://editor.p5js.org/workshop2023/full/29Id4WGSL"
+    value="https://workshop2023.github.io/workshop2023/"
   />
     <input type="text2" id="fname" name="fname" placeholder="suggest a prompt" class = "subbut">
     <input type ="submit" class = "subbut">
